--- a/config/corne.conf
+++ b/config/corne.conf
@@ -1,6 +1,7 @@
 # Uncomment the following lines to enable the Corne RGB Underglow
-# CONFIG_ZMK_RGB_UNDERGLOW=y
-# CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW=y
+CONFIG_WS2812_STRIP=y
+CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 
 # Uncomment the following line to enable the Corne OLED Display
 # CONFIG_ZMK_DISPLAY=y
@@ -13,4 +14,4 @@ CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=3600000
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
 # Change board name
-CONFIG_ZMK_KEYBOARD_NAME="andrew's corne"
+CONFIG_ZMK_KEYBOARD_NAME="clare's corne"
